--- a/ProductService/src/main/resources/application.yaml
+++ b/ProductService/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8082
+  port: 8081
 spring:
   application:
-    name: order-service
+    name: product-service
   config:
     import: "optional:configserver:http://localhost:8888"
   profiles:
