--- a/UserService/UserService/src/main/resources/application.yaml
+++ b/UserService/UserService/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8082
+  port: 8083
 spring:
   application:
-    name: order-service
+    name: user-service
   config:
     import: "optional:configserver:http://localhost:8888"
   profiles:
