--- a/ProductService/src/main/resources/application.yaml
+++ b/ProductService/src/main/resources/application.yaml
@@ -5,6 +5,16 @@ spring:
     name: product-service
   config:
     import: "optional:configserver:http://localhost:8888"
+  datasource:
+    url: jdbc:mysql://localhost:3306/product_db
+    username: root
+    password: Password123@
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   profiles:
     active: prod
 management:
